--- a/TODO
+++ b/TODO
@@ -1,26 +1,9 @@
-README.md
-3d.c
-Makefile
-textures
-  *.png
-  *.jpg
-libs
-  color.h
-  utils.h
-  maze
-    maze.h
-    maze.c
-    // ok, séparer les fichier
-  render
-    render.h
-    render.c
-    // T_texture
-    // load_texture, t_*, draw*
-    // faire fonction pour load toutes les textures
-    
-    object.h
-    object.c
-    // import render.h	
+Make type for all objects data
 
-/*---------------------------------------*/
-Enlever const aux C_color pour tester avec render
+typedef struct objects_data
+{
+  O_objects objects[O_NB_MAX_OBJECTS];
+  float objects_prop[O_NB_MAX_OBJECTS];
+  float objects_dist[O_NB_MAX_OBJECTS];
+  int nb_oject;
+} Objects_data;
